// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineEvent should render correctly when active 1`] = `
<div
  class="timeline-event active"
>
  <div
    class="text-xl font-medium"
  >
    November 2020 - December 2020
  </div>
</div>
`;

exports[`TimelineEvent should render correctly when inactive 1`] = `
<div
  class="timeline-event"
>
  <div
    class="text-xl font-medium"
  >
    November 2020 - December 2020
  </div>
</div>
`;
